# neuralnet

./: CMakeLists.txt  LICENSE  README.md  nn  nn.c
.github/workflows/: cmake-single-platform.yml
include/: matrix.h  neural_network.h
src/: matmul.c  matmul.h  matrix.c  matrix.h  neural_network.c
tests/: test_forward_propagation.c  test_matrix_operations.c
